# KwaaiNet

./: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  TODO.md  install.sh  setup.sh
.github/workflows/: publish-crates.yml  release.yml
core/: Cargo.toml  release.toml
core/.cargo/: config.toml
core/crates/kwaai-cli/: Cargo.toml
core/crates/kwaai-cli/src/: api.rs  block_rpc.rs  calibration.rs  cli.rs  config.rs  daemon.rs  health.rs  hf.rs  identity.rs  main.rs  map.rs  node.rs  ollama.rs  rebalancer.rs  service.rs  setup.rs  shard_api.rs  shard_cmd.rs  throughput.rs  updater.rs  vpk.rs
core/crates/kwaai-distributed/: Cargo.toml
core/crates/kwaai-distributed/src/: averaging.rs  coordinator.rs  expert.rs  lib.rs  moe.rs
core/crates/kwaai-hivemind-dht/src/: client.rs  protocol.rs  server.rs
core/crates/kwaai-inference/src/: engine.rs  lib.rs  loader.rs  shard.rs
core/crates/kwaai-p2p-daemon/: build.rs
core/crates/kwaai-p2p-daemon/src/: client.rs  daemon.rs  lib.rs  persistent.rs
core/crates/kwaai-p2p/src/: config.rs  dht.rs  lib.rs  network.rs  rpc.rs  transport.rs
core/crates/kwaai-trust/: Cargo.toml
core/crates/kwaai-trust/src/: credential.rs  did.rs  lib.rs  storage.rs  trust_score.rs  verify.rs
core/crates/kwaai-wasm/: Cargo.toml
core/crates/summit-server/: Cargo.toml
core/crates/summit-server/src/: db.rs  main.rs  routes.rs
core/examples/: dht_node.rs  expert_registry.rs  p2p_node.rs  petals_bootstrap.rs  petals_dht.rs  petals_visible.rs  quantization.rs  query_dht.rs  query_dht_state.rs
scripts/: build-p2pd.sh
