[package]
name = "kwaai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "kwaainet – KwaaiNet node CLI"
default-run = "kwaainet"

[[bin]]
name = "kwaainet"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde_yaml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# System monitoring
sysinfo = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# HTTP (IP detection, health check, update check)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# P2P / DHT protocol
libp2p = { workspace = true }
prost = { workspace = true }
rmp-serde = { workspace = true }

# Not yet in workspace.dependencies
sha1 = "0.10"
hex = "0.4"
rmpv = "1.0"

# HTTP server (OpenAI API)
axum = { version = "0.7", features = ["json"] }

# KwaaiNet crates
kwaai-p2p = { path = "../kwaai-p2p" }
kwaai-hivemind-dht = { path = "../kwaai-hivemind-dht" }
kwaai-p2p-daemon = { path = "../kwaai-p2p-daemon" }
kwaai-inference = { path = "../kwaai-inference" }
kwaai-trust = { path = "../kwaai-trust" }

# Trust graph dependencies
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

# Enable Metal GPU acceleration on macOS (Apple Silicon / M-series).
# Cargo merges features from target-specific sections with the base [dependencies] entry.
[target.'cfg(target_os = "macos")'.dependencies]
kwaai-inference = { path = "../kwaai-inference", features = ["metal"] }
