[package]
name = "kwaai-distributed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed ML operations for KwaaiNet - MoE, parameter averaging (Hivemind patterns)"
keywords = ["distributed", "moe", "mixture-of-experts", "federated", "averaging"]

[dependencies]
# Internal crates
kwaai-p2p = { workspace = true }
kwaai-inference = { workspace = true }
kwaai-compression = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# ML
candle-core = { workspace = true }
candle-nn = { workspace = true }
half = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }

[features]
default = []
