[package]
name = "kwaai-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for KwaaiNet - browser integration"
keywords = ["wasm", "webassembly", "browser", "javascript", "bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Navigator",
    "Worker",
    "MessageEvent",
] }

# Async
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
